--- a/ue4/MyProject/Config/DefaultInput.ini
+++ b/ue4/MyProject/Config/DefaultInput.ini
@@ -79,7 +79,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
-+ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Prone",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
