--- a/ue4/MyProject/Config/DefaultEngine.ini
+++ b/ue4/MyProject/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 EditorStartupMap=/Game/MyProject/Maps/Gym/GymDefault.GymDefault
+GameInstanceClass=/Script/MyProject.MPGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
