[Ladder][BugFix] Ladder has been added. Some bugs with mantle have been fixed.

--- a/ue4/MyProject/Config/DefaultInput.ini
+++ b/ue4/MyProject/Config/DefaultInput.ini
@@ -88,6 +88,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="NextItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="PreviousItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="EquipPrimaryItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
++ActionMappings=(ActionName="FiringMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="InteractWithLadder",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
@@ -105,6 +107,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="SwimRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="SwimUp",Scale=1.000000,Key=SpaceBar)
 +AxisMappings=(AxisName="SwimUp",Scale=-1.000000,Key=LeftControl)
++AxisMappings=(AxisName="ClimbLadderUp",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="ClimbLadderUp",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
