--- a/ue4/MyProject/Config/DefaultEngine.ini
+++ b/ue4/MyProject/Config/DefaultEngine.ini
@@ -57,18 +57,20 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Bullet")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Climbing")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="InteractionVolume")
-+EditProfiles=(Name="NoCollision",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
-+EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Bullet",Response=ECR_Overlap),(Channel="Climbing",Response=ECR_Overlap)))
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="WallRunnable")
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore),(Channel="WallRunnable")))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Bullet",Response=ECR_Overlap),(Channel="Climbing",Response=ECR_Overlap),(Channel="WallRunnable")))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Bullet",Response=ECR_Overlap),(Channel="Climbing",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
 +EditProfiles=(Name="Spectator",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Bullet"),(Channel="Climbing",Response=ECR_Ignore),(Channel="InteractionVolume",Response=ECR_Overlap)))
-+EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore),(Channel="WallRunnable")))
 +EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="Bullet",Response=ECR_Ignore),(Channel="Climbing",Response=ECR_Ignore)))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Climbing",Response=ECR_Ignore),(Channel="Bullet")))
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="Climbing",Response=ECR_Ignore)))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="WallRunnable")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
